<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/send_broadcast_text"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/background_floating_material_dark"
        android:text="@string/broadcast_description"
        android:id="@+id/textView2"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/brdcast_button_txt"
        android:background="@color/highlighted_text_material_dark"
        android:id="@+id/button"
        android:onClick="onSendClick"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="41dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/reset_brdcst_cnt"
        android:id="@+id/textView3"
        android:layout_below="@+id/button"
        android:layout_alignParentStart="true"
        android:layout_marginTop="48dp"
        android:layout_alignEnd="@+id/button" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/reset_btn_txt"
        android:background="@color/highlighted_text_material_dark"
        android:id="@+id/button2"
        android:onClick="onResetClick"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true" />
</RelativeLayout>
